--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 diff-match-patch==20121119
 dj-database-url==0.5.0
-Django==2.0.4
+Django>=2.2.10
 django-import-export==1.0.0
 et-xmlfile==1.0.1
 gunicorn==19.7.1
