--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ jdcal==1.3
 odfpy==1.3.6
 openpyxl==2.5.1
 pytz==2018.3
-PyYAML==3.12
+PyYAML>=4.2b1 
 tablib==0.12.1
 unicodecsv==0.14.1
 whitenoise==3.3.1
